# courtlistener-sdk

./: .gitignore  100_percent_coverage_analysis.md  100_percent_coverage_progress_report.md  CHANGELOG.md  ISSUE_TEMPLATES.md  LICENSE  Makefile  README.md  SECURITY.md  coverage.ini  coverage_analysis_report.md  create_github_issues.sh  debug_docket_api.py  debug_docket_test.py  debug_endpoints.py  env.example  issue-10-proposed-solution.md  issue-19-closed-comment.md  issue-19-pr-body.md  issue-19-proposed-solution.md  issue-20-closed-comment.md  issue-20-pr-body.md  issue-20-proposed-solution.md  pytest.ini  requirements.txt  setup.py  setup_api_token.py  test_final_integration.py  test_real_api.py
python/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
python/courtlistener/: __init__.py  client.py  config.py  endpoints.py  exceptions.py  transport.py
python/courtlistener/api/: agreements.py  alerts.py  attorneys.py  audio.py  citations.py  clusters.py  courts.py  debts.py  disclosure_positions.py  docket_entries.py  dockets.py  documents.py  financial.py  financial_disclosures.py  fjc_integrated_database.py  gifts.py  investments.py  judges.py  opinions.py  originating_court_information.py  parties.py  people.py  political_affiliations.py  positions.py  recap_documents.py  schools.py  tag.py
python/courtlistener/client/: __init__.py
python/courtlistener/models/: aba_rating.py  agreement.py  audio.py  base.py  citation.py  cluster.py  debt.py  disclosure_position.py  docket_entry.py  document.py  education.py  financial.py  gift.py  investment.py  judge.py  opinion.py  opinion_cited.py  position.py  spouse_income.py  tag.py
python/courtlistener/utils/: __init__.py  filters.py  pagination.py  validators.py
python/examples/: README.md  advanced_usage_examples.py  api_endpoints_examples.py  endpoint_showcase.py  search_examples.py
python/tests/: __init__.py  conftest.py  test_client.py  test_client_comprehensive.py  test_config_comprehensive.py  test_mocks.py
python/tests/coverage/: __init__.py  coverage_config.py  test_coverage_analysis.py
python/tests/e2e/: test_complete_workflows.py  test_error_scenarios.py  test_performance_scenarios.py
python/tests/integration/: test_all_endpoints.py  test_citations_integration.py  test_financial_disclosures_integration.py  test_full_workflows.py  test_integration_error_scenarios.py  test_recap_integration.py
python/tests/live/: test_live_api_connectivity.py  test_live_api_functionality.py  test_live_api_performance.py
python/tests/manual_debug/: debug_case_names.py  debug_response.py
python/tests/test_api/: test_api_base_comprehensive.py  test_attorneys_comprehensive.py  test_citations_comprehensive.py  test_clusters.py  test_clusters_comprehensive.py  test_docket_alerts.py  test_docket_entries.py  test_docket_entries_comprehensive.py  test_dockets.py  test_dockets_comprehensive.py  test_financial_disclosures.py  test_investments.py  test_opinions.py  test_parties_comprehensive.py  test_people_comprehensive.py  test_political_affiliations.py  test_recap_documents.py  test_reimbursements.py  test_search_comprehensive.py  test_sources.py  test_spouse_incomes.py  test_standard_methods.py
python/tests/test_client/: test_client_comprehensive.py
python/tests/test_models/: test_aba_rating.py  test_agreement.py  (+27 more)
(+399 files in other folders)
