[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courtlistener-sdk-python"
version = "0.1.0"
description = "An unofficial Python SDK for the CourtListener REST API"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "GNU Affero General Public License v3.0"}
authors = [
    {name = "CourtListener SDK Community", email = "actuallyrizzn@gmail.com"}
]
keywords = [
    "legal",
    "court",
    "api",
    "sdk",
    "courtlistener",
    "case law",
    "dockets",
    "judges",
    "unofficial"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Legal",
]
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "build>=1.0.3",
    "twine>=4.0.0",
]
pandas = [
    "pandas>=1.5.0",
]
tqdm = [
    "tqdm>=4.64.0",
]
all = [
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
]

[project.urls]
Homepage = "https://github.com/actuallyrizzn/courtlistener-sdk"
Documentation = "https://github.com/actuallyrizzn/courtlistener-sdk/blob/master/README.md"
Repository = "https://github.com/actuallyrizzn/courtlistener-sdk"
"Bug Reports" = "https://github.com/actuallyrizzn/courtlistener-sdk/issues"

[tool.setuptools]
packages = ["courtlistener"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--ignore=tests/live",
    "--ignore=tests/e2e",
]

[tool.coverage.run]
source = ["courtlistener"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

